--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "license": "MIT",
   "scripts": {
     "dev": "ts-node-dev  --inspect --transpile-only --ignore-watch node_modules --respawn src/server.ts",
-    "typeorm": "ts-node-dev ./node_modules/typeorm/cli"
+    "typeorm": "ts-node-dev ./node_modules/typeorm/cli",
+    "test": "jest"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.0.3",
     "@types/multer": "^1.4.7",
     "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^8.3.1",
@@ -26,8 +28,10 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-promise": "^4.2.1",
+    "jest": "^27.4.4",
     "prettier": "^2.3.2",
     "prettier-config-standard": "^4.0.0",
+    "ts-jest": "^27.1.1",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.3.5"
   },
