--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "ts-node-dev -r tsconfig-paths/register  --inspect --transpile-only --ignore-watch node_modules --respawn src/shared/infra/http/server.ts",
     "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli",
-    "test": "jest",
+    "test": "NODE_ENV=test jest",
     "seed:admin": "ts-node-dev src/shared/infra/typeorm/seed/admin.ts"
   },
   "devDependencies": {
@@ -15,6 +15,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.3",
     "@types/multer": "^1.4.7",
+    "@types/supertest": "^2.0.11",
     "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^4.29.1",
@@ -41,6 +42,7 @@
     "@types/jsonwebtoken": "^8.5.6",
     "bcryptjs": "^2.4.3",
     "csv-parse": "^4.16.3",
+    "supertest": "^6.2.2",
     "dayjs": "^1.10.7",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
